--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,8 @@ repositories {
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+
+//dependency added by roostGPT
+testImplementation("org.hamcrest:hamcrest:2.2")
 }
 
