--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,9 @@ repositories {
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+
+//dependency added by roostGPT
+testImplementation('org.junit.jupiter:junit-jupiter-engine:5.8.2')
+testImplementation('org.junit.vintage:junit-vintage-engine:5.8.2')
 }
 
